utils/local_deploy/07_logging/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
    targetPort: 5601
    name: log
    protocol: TCP
  selector:
    app: kibana
