utils/local_deploy/07_logging/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: kibana.logging.svc.cluster.local
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      opentracing off;
  name: kibana
  namespace: logging
spec:
  tls:
  - hosts:
    - "yakut-laptop"
    secretName: kibana-certs
  rules:
  - host: "yakut-laptop"
    http:
      paths:
      - path: /kibana
        backend:
          serviceName: kibana
          servicePort: log
